Обновил курс Lucid — добавлены 6 недель, архив, кнопки

--- a/archive.html
+++ b/archive.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Архив ответов</title>
-</head>
+<head><meta charset="UTF-8"><title>Архив ответов</title></head>
 <body>
   <h1>Архив ответов Lucid</h1>
-  <p>Здесь будут храниться ответы по дням. Позже добавим базу и доступ через Telegram.</p>
+  <p>Здесь будут храниться ответы по дням. В будущем сюда добавится база данных и Telegram-интеграция.</p>
 </body>
 </html>
