--- a/lucid_day6.html
+++ b/lucid_day6.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Lucid - День 6</title>
-</head>
+<head><meta charset="UTF-8"><title>Lucid - День 6</title></head>
 <body>
-  <h1>День 6</h1>
-  <h2>Вопрос дня</h2>
-  <p>Глубокий вопрос дня 6</p>
-
-  <h2>Практика</h2>
-  <p>Практика осознанности дня 6</p>
-
-  <h2>Код дня</h2>
-  <blockquote>«Код дня 6 — мудрая цитата»</blockquote>
-
-  <h3>Твой ответ:</h3>
-  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br>
-  <a href="https://t.me/LucidEmpathBot" target="_blank"><button>Получить разбор</button></a>
+  <h1>День 6 — Пробуждение</h1>
+  <h2>🧠 Вопрос дня</h2>
+  <p>Что такое реальность для тебя? Что, если всё вокруг — лишь проекция ума?</p>
+  <h2>🧘 Практика</h2>
+  <p>Закрой глаза на 5 минут. Заметь всё, что ты слышишь, чувствуешь, ощущаешь. Без анализа. Просто будь.</p>
+  <h2>🔐 Код дня</h2>
+  <blockquote>«Смысл не найден — он создан»</blockquote>
+  <h3>💬 Твой ответ:</h3>
+  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br><br>
+  <a href="https://t.me/LucidEmpathBot" target="_blank">
+    <button style="padding:10px 20px;font-size:16px;">Получить разбор от Lucid</button>
+  </a>
 </body>
 </html>
