--- a/lucid_day11.html
+++ b/lucid_day11.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Lucid - День 11</title>
-</head>
+<head><meta charset="UTF-8"><title>Lucid - День 11</title></head>
 <body>
-  <h1>День 11</h1>
-  <h2>Вопрос дня</h2>
-  <p>Глубокий вопрос дня 11</p>
-
-  <h2>Практика</h2>
-  <p>Практика осознанности дня 11</p>
-
-  <h2>Код дня</h2>
-  <blockquote>«Код дня 11 — мудрая цитата»</blockquote>
-
-  <h3>Твой ответ:</h3>
-  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br>
-  <a href="https://t.me/LucidEmpathBot" target="_blank"><button>Получить разбор</button></a>
+  <h1>День 11 — Осознание</h1>
+  <h2>🧠 Вопрос дня</h2>
+  <p>Когда ты чувствовал, что живёшь не своей жизнью? Почему?</p>
+  <h2>🧘 Практика</h2>
+  <p>Проведи день в режиме наблюдателя. Отмечай, какие мысли не твои, какие эмоции ты подхватываешь извне.</p>
+  <h2>🔐 Код дня</h2>
+  <blockquote>«Ответ всегда рядом, если ты готов задать правильный вопрос»</blockquote>
+  <h3>💬 Твой ответ:</h3>
+  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br><br>
+  <a href="https://t.me/LucidEmpathBot" target="_blank">
+    <button style="padding:10px 20px;font-size:16px;">Получить разбор от Lucid</button>
+  </a>
 </body>
 </html>
