--- a/lucid_day18.html
+++ b/lucid_day18.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Lucid - День 18</title>
-</head>
+<head><meta charset="UTF-8"><title>Lucid - День 18</title></head>
 <body>
-  <h1>День 18</h1>
-  <h2>Вопрос дня</h2>
-  <p>Глубокий вопрос дня 18</p>
-
-  <h2>Практика</h2>
-  <p>Практика осознанности дня 18</p>
-
-  <h2>Код дня</h2>
-  <blockquote>«Код дня 18 — мудрая цитата»</blockquote>
-
-  <h3>Твой ответ:</h3>
-  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br>
-  <a href="https://t.me/LucidEmpathBot" target="_blank"><button>Получить разбор</button></a>
+  <h1>День 18 — Выбор</h1>
+  <h2>🧠 Вопрос дня</h2>
+  <p>Какие решения ты откладываешь, и что мешает их принять?</p>
+  <h2>🧘 Практика</h2>
+  <p>Возьми 1 нерешённую ситуацию. Спроси себя: что я боюсь потерять, если приму решение?</p>
+  <h2>🔐 Код дня</h2>
+  <blockquote>«Смысл не найден — он создан»</blockquote>
+  <h3>💬 Твой ответ:</h3>
+  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br><br>
+  <a href="https://t.me/LucidEmpathBot" target="_blank">
+    <button style="padding:10px 20px;font-size:16px;">Получить разбор от Lucid</button>
+  </a>
 </body>
 </html>
