--- a/lucid_day22.html
+++ b/lucid_day22.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Lucid - День 22</title>
-</head>
+<head><meta charset="UTF-8"><title>Lucid - День 22</title></head>
 <body>
-  <h1>День 22</h1>
-  <h2>Вопрос дня</h2>
-  <p>Глубокий вопрос дня 22</p>
-
-  <h2>Практика</h2>
-  <p>Практика осознанности дня 22</p>
-
-  <h2>Код дня</h2>
-  <blockquote>«Код дня 22 — мудрая цитата»</blockquote>
-
-  <h3>Твой ответ:</h3>
-  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br>
-  <a href="https://t.me/LucidEmpathBot" target="_blank"><button>Получить разбор</button></a>
+  <h1>День 22 — Свобода</h1>
+  <h2>🧠 Вопрос дня</h2>
+  <p>Что для тебя значит быть свободным? Внутри и снаружи.</p>
+  <h2>🧘 Практика</h2>
+  <p>Сделай то, что давно хотел, но откладывал. Даже если на 5 минут. Зафиксируй ощущения после.</p>
+  <h2>🔐 Код дня</h2>
+  <blockquote>«Свобода начинается с честного взгляда внутрь»</blockquote>
+  <h3>💬 Твой ответ:</h3>
+  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br><br>
+  <a href="https://t.me/LucidEmpathBot" target="_blank">
+    <button style="padding:10px 20px;font-size:16px;">Получить разбор от Lucid</button>
+  </a>
 </body>
 </html>
