--- a/lucid_day33.html
+++ b/lucid_day33.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Lucid - День 33</title>
-</head>
+<head><meta charset="UTF-8"><title>Lucid - День 33</title></head>
 <body>
-  <h1>День 33</h1>
-  <h2>Вопрос дня</h2>
-  <p>Глубокий вопрос дня 33</p>
-
-  <h2>Практика</h2>
-  <p>Практика осознанности дня 33</p>
-
-  <h2>Код дня</h2>
-  <blockquote>«Код дня 33 — мудрая цитата»</blockquote>
-
-  <h3>Твой ответ:</h3>
-  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br>
-  <a href="https://t.me/LucidEmpathBot" target="_blank"><button>Получить разбор</button></a>
+  <h1>День 33 — Цель</h1>
+  <h2>🧠 Вопрос дня</h2>
+  <p>Какую роль ты хочешь сыграть в этом мире? Играешь ли ты её уже?</p>
+  <h2>🧘 Практика</h2>
+  <p>Веди дневник: кто ты, зачем ты здесь, куда идёшь. Каждый вечер в течение недели.</p>
+  <h2>🔐 Код дня</h2>
+  <blockquote>«Осознанность — это не избавление от мыслей, а выход за их пределы»</blockquote>
+  <h3>💬 Твой ответ:</h3>
+  <textarea rows="8" cols="80" placeholder="Напиши свой ответ здесь..."></textarea><br><br>
+  <a href="https://t.me/LucidEmpathBot" target="_blank">
+    <button style="padding:10px 20px;font-size:16px;">Получить разбор от Lucid</button>
+  </a>
 </body>
 </html>
